# codegenApp

./: .env  .env.ci  .env.example  .env.local.example  .env.production  .gitignore  API_VALIDATION_REPORT.md  ARCHITECTURE.md  AUTONOMOUS_SYSTEM_ANALYSIS.md  CICD_SETUP.md  CICD_VALIDATION_INSTRUCTIONS.md  COMPREHENSIVE_CICD_PLAN.md  COMPREHENSIVE_COOKIE_EXTRACTOR_README.md  COOKIE_EXTRACTION_README.md  CORS_FIX_GUIDE.md  DATABASE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_TEST_REPORT.md  DEPLOYMENT_VALIDATION_SUMMARY.md  Dockerfile  ENVIRONMENT_SETUP.md  FINAL_VALIDATION_REPORT.md  GITHUB_APP_SETUP.md  INSTALLATION_FIXES.md  MANIFEST.in  MIGRATION_GUIDE.md  PIPELINE_TEST.md  PLAN.md  PROGRAM_ANALYSIS.md  README.md  README.md.backup  README_TESTING.md  RUNNING.md  SETUP.md  SETUP_CHECKLIST.md  STEP1.md  STEP2.md  (+119 more)
api/: README.md  auth-handler.js  automation-service.js  chrome-cookie-extractor.js  ecosystem.config.js  github-app.js  health-monitor.js  logger.js  metrics.js  selectors.js  server.js
backend/: .env.example  ARCHITECTURE.md  Dockerfile  README.md  TEST_RESULTS.md  auth-handler.js  automation-service.js  config.yaml  ecosystem.config.js  logger.js  main.py  main_old.py  main_simple.py  package-lock.json  package.json  pytest.ini  requirements-test.txt  requirements.txt  selectors.js  server.js  start.sh  start_backend.sh  test-codegen-api-service.js  test-codegen-integration.js  test-complete-workflow-report.json  test-complete-workflow.js  test-setup.js  test-system.js  validate-implementation.js
cli/: README.md  kit_manager.py  setup.py
cloudflare/: README.md  build.sh  pyproject.toml  wrangler.toml
cloudflare-webhook-worker/: build.sh  pyproject.toml  wrangler.toml
cloudflare-webhook-worker/src/: worker.py
cloudflare-worker/: package.json  webhook-gateway.js  webhook-handler.js  wrangler.toml
cloudflare/src/: worker.py
codegenapp/: __init__.py  cli.py
codegenapp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docker/: nginx.conf  start.sh  supervisord.conf
docs/: LIBRARY_KIT_INTEGRATION_COMPLETE.md  PUPPETEER_SETUP.md  WEBHOOK_IMPLEMENTATION_GUIDE.md  api-endpoints.md  api-migration-analysis.md  graph_sitter_integration.md
examples/: repository_analysis.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json
lib/: github-app.ts
logs/: health-check-1753529594387.json
monitoring/: health-check.js  package-lock.json  package.json
public/: manifest.json
research/: commercial-licensing-analysis.md  developer-experience-analysis.md  operational-deployment-analysis.md  platform-fundamentals.md  technical-architecture-comparison.md  use-case-mapping.md
scripts/: check-services.sh  codegen-integration.js  deploy-local.sh  install-puppeteer-deps.sh  start-services.sh  stop-services.sh  test-codegen-api.js  test-webhook.js  validate-env.js
server/: .env.example  auth-handler.js  automation-service.js  database.js  database.sql  index.js  logger.js  package-lock.json  package.json  selectors.js  web-eval-routes.js
services/: codegenService.ts  githubService.ts  validationService.ts
src/: App.css  App.test.tsx  App.tsx  create-agent-run.tsx  global.css  index.css  list-agent-runs.tsx  list-organizations.tsx  setupProxy.js  setupTests.ts
testing/: test_codebase_validation.py  test_codegenapp.py
tests/: browser-automation.test.tsx  comprehensive-api-validation.js  comprehensive-validation-report.json  debug-credentials.js  feature-matrix-report.json  feature-matrix-validation.js  list-agent-runs-automation.test.tsx  run-all-validations.js  test-api.js  test_authentication.py  test_basic_functionality.py  test_codegen_integration.py  test_comprehensive_features.py  test_step1_type_safety.py  ui-component-validation.js  (+3 more)
(+373 files in other folders)
