[project]
name = "codegenapp-webhook-worker"
version = "0.1.0"
description = "Cloudflare Workers webhook handler for CodegenApp PR events and grainchain validation"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic",
    "httpx",
    "python-jose[cryptography]",
    "python-multipart",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

